# itnb-widget-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  REPO_SYNC_GUIDE.md  deployment_test_results.md  enhanced_team_data_with_images.json  pyproject.toml  requirements.txt  start.sh  sync-repos.sh  team_images_handling_guide.md  test_api.py  test_deployment.sh  test_frontend.html
.cursor/rules/: software-master.mdc
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
scripts/: gx_docs_list.py  gx_ingest_one.py  gx_search_check.py
src/snl_poc/: api.py  crew.py  crew_phoenix.py  crew_phoenix_optimized.py  ingest_posters.py  main.py  main_phoenix.py  main_phoenix_optimized.py  phoenix_fast_chatbot.py  quick_optimizations.md  test_new_prompts.py  test_questions.txt
src/snl_poc/LLM-as-judge/: evaluator.py  queries.json  run_evaluation.py
src/snl_poc/POC_test/: test_classification.py
src/snl_poc/config/: agents.yaml  agents_itnb.yaml  agents_phoenix.yaml  agents_phoenix_optimized.yaml  agents_v0.yaml  agents_v1.yaml  tasks.yaml  tasks_itnb.yaml  tasks_phoenix.yaml  tasks_phoenix_optimized.yaml  tasks_v0.yaml  tasks_v1.yaml
src/snl_poc/knowledge/: company_about-phoenix-technologies_career_extracted.json  company_about-phoenix-technologies_certificates-and-compliance_extracted.json  company_about-phoenix-technologies_contact_extracted.json  company_about-phoenix-technologies_team_extracted.json  company_extracted.json  contact_extracted.json  ecosystem_partner-network_ai-innovation-center_extracted.json  home_extracted.json  (+17 more)
(+114 files in other folders)
