[project]
name = "snl_poc"
version = "0.1.0"
description = "snl-poc using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
snl_poc = "snl_poc.main:run"
run_crew = "snl_poc.main:run"
train = "snl_poc.main:train"
replay = "snl_poc.main:replay"
test = "snl_poc.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
